--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "wgraphbase",
   "version": "0.3.24",
   "engine": "node >= 6.0.0",
-  "description": "Manipulations with graph",
+  "description": "Sketch. Collection of routines and classes to operate graphs.",
   "author": "Kostiantyn Wandalen <wanalen@willbe.so>",
   "contributors": [
     {
       "name": "Kostiantyn Wandalen",
-      "email": "wanalen@willbe.so>"
+      "email": "wanalen@willbe.so"
     }
   ],
   "license": "MIT",
