--- a/.ex.will.yml
+++ b/.ex.will.yml
@@ -2,8 +2,8 @@
 about :
 
   name : wGraphBase
-  description : Sketch. Collection of routines and classes to operate graphs.
-  version : 0.3.44
+  description : 'Sketch. Collection of routines and classes to operate graphs.'
+  version : 0.3.45
   enabled : 1
   interpreters :
   - nodejs >= 6.0.0
