--- a/.ex.will.yml
+++ b/.ex.will.yml
@@ -1,51 +1,91 @@
 
-
 about :
 
-  name : "wGraphBase"
-  description : "Sketch. Collection of routines and classes to operate graphs."
-  version : "0.3.64"
+  name : 'wGraphBase'
+  description : 'Sketch. Collection of routines and classes to operate graphs.'
+  version : '0.4.0'
   enabled : 1
   interpreters :
-  - nodejs >= 8.0.0
+  - njs >= 8.0.0
   - chrome >= 60.0.0
   - firefox >= 60.0.0
   keywords :
+  - Graph
+  - Abstract graph
   - wTools
-
-execution :
-
-  scripts :
-    test : wtest .run proto/**
-    docgen : wdocgen staging
+  license : MIT
+  author : 'Kostiantyn Wandalen <wanalen@willbe.so>'
+  contributors :
+  - 'Kostiantyn Wandalen <wanalen@willbe.so>'
+  npm.name : 'wgraphbase'
+  npm.scripts :
+    test : 'wtest .run proto/**'
+    docgen : 'wdocgen .build proto'
 
 path :
 
-  repository : git+https:///github.com/Wandalen/wGraphBase.git
-  bugs : https:///github.com/Wandalen/wGraphBase/issues
+  repository : git+https:///github.com/Wandalen/wGraph.git
+  bugtracker : https:///github.com/Wandalen/wGraph/issues
 
 step :
 
-  export.proto :
+  proto.export :
     inherit : module.export
     export : path::proto
     tar : 0
     criterion :
-      debug : 1
-      proto : 1
+      content : 'proto'
+
+  doc.export :
+    inherit : module.export
+    export : path::doc
+    tar : 0
+    criterion :
+      content : 'doc'
+
+  npm.export :
+    inherit : module.export
+    export : out.npm
+    tar : 0
+    criterion :
+      content : 'npm'
+
+  npm.publish :
+    shell : npm publish
 
 build :
 
   proto.export :
     criterion :
-      default : 1
-      debug : 1
-      raw : 1
-      proto : 1
+      content : 'proto'
       export : 1
-      tar : 1
-      public : 1
     steps :
-      - build::debug.raw
-      - step::export.proto
+      # - build::debug.raw
+      - step::proto.export
 
+  doc.export :
+    criterion :
+      content : 'doc'
+      export : 1
+    steps :
+      # - build::debug.raw
+      - step::doc.export
+
+  npm.export :
+    criterion :
+      content : 'npm'
+      export : 1
+    steps :
+      # - build::debug.raw
+      # - step::npm.export
+      - step::npm.publish
+
+  export :
+
+    criterion :
+      default : 1
+      export : 1
+    steps :
+      # - build::npm
+      - build::proto.export
+      # - build::doc.export
