--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Wandalen/wGraph.git"
+    "url": "https://github.com/Wandalen/wGraphBase.git"
   },
   "bugs": {
-    "url": "https://github.com/Wandalen/wGraph/issues"
+    "url": "https://github.com/Wandalen/wGraphBase/issues"
   },
   "dependencies": {
     "wTools": "",
