--- a/.ex.will.yml
+++ b/.ex.will.yml
@@ -25,7 +25,7 @@ about :
 path :
 
   repository : git+https:///github.com/Wandalen/wGraph.git
-  remotes :
+  origins :
    - git+https:///github.com/Wandalen/wGraphBase.git
    - npm:///wgraphbase
   bugtracker : https:///github.com/Wandalen/wGraph/issues
