--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wgraphbase",
-  "version" : "0.3.185",
+  "version" : "0.3.186",
   "engine" : "node >= 8.0.0",
   "description" : "Sketch. Collection of routines and classes to operate graphs.",
   "author" : "Kostiantyn Wandalen <wanalen@willbe.so>",
@@ -21,7 +21,7 @@
   {
     "url" : "https://github.com/Wandalen/wGraphBase/issues"
   },
-  "dependencies" : { "wTools" : "gamma", "wCopyable" : "gamma" },
-  "devDependencies" : { "wTesting" : "gamma" },
+  "dependencies" : { "wTools" : "alpha", "wCopyable" : "alpha" },
+  "devDependencies" : { "wTesting" : "alpha" },
   "keywords" : [ "Graph", "Abstract graph", "wTools" ]
 }
