--- a/.ex.will.yml
+++ b/.ex.will.yml
@@ -14,9 +14,9 @@ about :
   - Abstract graph
   - wTools
   license : MIT
-  author : 'Kostiantyn Wandalen <wanalen@willbe.so>'
+  author : 'Kostiantyn Wandalen <wanalen@01.school>'
   contributors :
-  - 'Kostiantyn Wandalen <wanalen@willbe.so>'
+  - 'Kostiantyn Wandalen <wanalen@01.school>'
   npm.name : 'wgraphbase'
   npm.scripts :
     test : 'wtest .run proto/**'
