--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version" : "0.3.186",
   "engine" : "node >= 8.0.0",
   "description" : "Sketch. Collection of routines and classes to operate graphs.",
-  "author" : "Kostiantyn Wandalen <wanalen@willbe.so>",
+  "author" : "Kostiantyn Wandalen <wanalen@01.school>",
   "contributors" :
   [
-    { "name" : "Kostiantyn Wandalen", "email" : "wanalen@willbe.so" }
+    { "name" : "Kostiantyn Wandalen", "email" : "wanalen@01.school" }
   ],
   "license" : "MIT",
   "main" : "proto/dwtools/amid/agraph/UseTop.s",
