--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name" : "wgraphextra",
   "version" : "0.4.3",
   "engine" : "node >= 10.0.0",
-  "description" : "Sketch. Collection of routines and classes to operate graphs.",
+  "description" : "Sketch. Collection of cross-platform routines and classes to operate graphs.",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
   "contributors" :
   [
