--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wgraphextra",
-  "version" : "0.4.25",
+  "version" : "0.4.26",
   "engine" : "node >= 10.0.0",
   "description" : "Sketch. Collection of cross-platform routines and classes to operate graphs.",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
@@ -22,6 +22,6 @@
     "url" : "https://github.com/Wandalen/wGraphExtra/issues"
   },
   "dependencies" : { "wTools" : "alpha", "wCopyable" : "alpha" },
-  "devDependencies" : { "wTesting" : "alpha" },
+  "devDependencies" : { "eslint" : "7.1.0", "wgraphextra" : "file:.", "wTesting" : "alpha" },
   "keywords" : [ "Graph", "Abstract graph", "wTools" ]
 }
