--- a/.im.will.yml
+++ b/.im.will.yml
@@ -7,6 +7,9 @@ submodule :
   wCopyable :
     path : npm:///wCopyable
     enabled : 0 # submodule
+  wGraph :
+    path : npm:///wgraph
+    enabled : 0 # submodule
   wgraphextra :
     path : hd://.
     enabled : 0 # submodule
