--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "wTools": "alpha",
-    "wCopyable": "alpha"
+    "wCopyable": "alpha",
+    "wgraphbasic": "alpha"
   },
   "devDependencies": {
     "eslint": "7.1.0",
