Fixed to pass tests 3

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "wTools": "alpha",
+    "wtemplatetree": "alpha",
     "wCopyable": "alpha"
   },
   "devDependencies": {
