Fixed to pass tests 4

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "wTools": "alpha",
-    "wtemplatetree": "alpha",
+    "wtemplatetree": "alphaa",
     "wCopyable": "alpha"
   },
   "devDependencies": {
