--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wgraphextra",
-  "version" : "0.4.60",
+  "version" : "0.4.61",
   "engine" : "node >= 10.0.0",
   "description" : "Sketch. Collection of cross-platform routines and classes to operate graphs.",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
@@ -10,7 +10,7 @@
   ],
   "license" : "MIT",
   "main" : "proto/node_modules/wgraphextra",
-  "files" : [ "proto/wtools/amid/l1/graphTools", "proto/wtools/Tools.s", "out", "proto/node_modules" ],
+  "files" : [ "proto/wtools/amid/l1/graphTools", "out", "proto/node_modules" ],
   "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen proto" },
   "repository" :
   {
