--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wgraphextra",
-  "version": "0.4.87",
+  "version": "0.4.88",
   "engine": "node >= 10.0.0",
   "description": "Sketch. Collection of cross-platform routines and classes to operate graphs.",
   "author": "Kostiantyn Wandalen <wanalen@01.school>",
@@ -31,12 +31,12 @@
     "url": "https://github.com/Wandalen/wGraphExtra/issues"
   },
   "dependencies": {
-    "wTools": "stable",
-    "wgraphbasic": "stable",
-    "wCopyable": "stable"
+    "wTools": "latest",
+    "wgraphbasic": "latest",
+    "wCopyable": "latest"
   },
   "devDependencies": {
-    "wTesting": "stable",
+    "wTesting": "latest",
     "eslint": "7.1.0"
   },
   "keywords": [
