--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wgraphextra",
-  "version": "0.4.106",
+  "version": "0.4.107",
   "engine": "node >= 10.0.0",
   "description": "Sketch. Collection of cross-platform routines and classes to operate graphs.",
   "author": "Kostiantyn Wandalen <wanalen@01.school>",
@@ -31,12 +31,12 @@
     "url": "https://github.com/Wandalen/wGraphExtra/issues"
   },
   "dependencies": {
-    "wTools": "latest",
-    "wgraphbasic": "latest",
-    "wCopyable": "latest"
+    "wTools": "alpha",
+    "wgraphbasic": "alpha",
+    "wCopyable": "alpha"
   },
   "devDependencies": {
-    "wTesting": "latest",
+    "wTesting": "alpha",
     "eslint": "7.32.0"
   },
   "keywords": [
